src-tauri/src/mcp/tools_ro/snapshots/agaric_lib__mcp__tools_ro__tests__tool_descriptions.snap
---
source: src/mcp/tools_ro/tests.rs
expression: wire
---
- description: List all pages with cursor pagination.
  inputSchema:
    additionalProperties: false
    properties:
      cursor:
        description: Opaque pagination cursor from a prior response.
        type: string
      limit:
        description: Max pages per response (capped at 100).
        maximum: 100
        minimum: 1
        type: integer
    type: object
  name: list_pages
- description: "Fetch a page and a paginated slice of its non-conflict subtree (grandchildren included). `page` also carries `properties` (every property row, raw), `tags` (tag ULIDs; `list_tags` names them) and `aliases`; the children are plain rows."
  inputSchema:
    additionalProperties: false
    properties:
      cursor:
        description: Opaque cursor for the children page.
        type: string
      limit:
        description: Max children per response (capped at 100).
        maximum: 100
        minimum: 1
        type: integer
      page_id:
        description: ULID of the page block.
        type: string
    required:
      - page_id
    type: object
  name: get_page
- description: "Full-text search across block content (FTS5). Returns BlockRow records; content is truncated to 512 chars per result. pass `filter` for structured narrowing (state / priority / due / scheduled / property / page-name globs / block-type / case-sensitive / whole-word / regex toggles)."
  inputSchema:
    additionalProperties: false
    properties:
      cursor:
        type: string
      filter:
        additionalProperties: false
        description: "Structured filter set mirroring the user-facing `SearchFilter` (omit for a query-string-only search)."
        properties:
          block_type_filter:
            description: "Restrict to a single `blocks.block_type` value (e.g. `'page'`)."
            type: string
          case_sensitive:
            type: boolean
          due_filter:
            description: "Date predicate on `blocks.due_date`. One of `{ \"named\": \"today\"|\"this-week\"|... }` or `{ \"op\": { \"op\": \"lt\"|..., \"date\": \"YYYY-MM-DD\" } }`."
            type: object
          exclude_page_globs:
            description: Page-name glob exclude list.
            items:
              type: string
            type: array
          excluded_priority_filter:
            items:
              type: string
            type: array
          excluded_property_filters:
            items:
              properties:
                key:
                  type: string
                value:
                  type: string
              required:
                - key
                - value
              type: object
            type: array
          excluded_state_filter:
            description: "`(todo_state IS NULL OR todo_state NOT IN (...))`. Adding literal `'none'` excludes the NULL bucket too, AND-joining to `(todo_state IS NOT NULL AND todo_state NOT IN (...))`; `'none'` alone emits `todo_state IS NOT NULL`."
            items:
              type: string
            type: array
          include_page_globs:
            description: "Page-name glob include list (SQLite GLOB syntax, `{a,b}` brace expansion). Bare tokens are wrapped with `*…*`."
            items:
              type: string
            type: array
          is_regex:
            description: "Treat `query` as a regex (FTS5 bypassed)."
            type: boolean
          priority_filter:
            items:
              type: string
            type: array
          property_filters:
            description: "AND-joined property predicates. Matches across `value_text` / `value_num` / `value_date` / `value_ref` with type coercion."
            items:
              properties:
                key:
                  type: string
                value:
                  type: string
              required:
                - key
                - value
              type: object
            type: array
          scheduled_filter:
            description: "Same shape as `due_filter` but on `blocks.scheduled_date`."
            type: object
          state_filter:
            description: "`todo_state IN (...)`. Literal `'none'` means `todo_state IS NULL`."
            items:
              type: string
            type: array
          whole_word:
            type: boolean
        type: object
      limit:
        description: Max results per response (capped at 50).
        maximum: 50
        minimum: 1
        type: integer
      parent_id:
        description: Optional parent ULID to scope the search.
        type: string
      query:
        description: FTS5 MATCH query string.
        type: string
      space_id:
        description: "ULID of the space the search runs inside. Required: every FTS5 hit is restricted to blocks whose owning page carries `space = ?space_id`."
        type: string
      tag_ids:
        description: Optional list of tag ULIDs to intersect the result set with.
        items:
          type: string
        type: array
    required:
      - query
      - space_id
    type: object
  name: search
- description: "Fetch a single block by ULID. Returns the BlockRow plus `properties` (every property row, raw), `tags` (tag ULIDs; `list_tags` names them) and, for a page, `aliases`; soft-deleted (tombstoned) blocks are excluded."
  inputSchema:
    additionalProperties: false
    properties:
      block_id:
        description: ULID of the block.
        type: string
    required:
      - block_id
    type: object
  name: get_block
- description: "List backlinks for a block, grouped by source page."
  inputSchema:
    additionalProperties: false
    properties:
      block_id:
        description: ULID of the target block/page.
        type: string
      cursor:
        type: string
      limit:
        description: Max grouped results per response (capped at 100).
        maximum: 100
        minimum: 1
        type: integer
      space_id:
        description: Optional ULID of the space to scope backlinks to. Omit for the unscoped (cross-space) view.
        type: string
    required:
      - block_id
    type: object
  name: list_backlinks
- description: "List every tag in the tag cache (no prefix filter), with cursor pagination."
  inputSchema:
    additionalProperties: false
    properties:
      cursor:
        description: Opaque pagination cursor from a prior response.
        type: string
      limit:
        description: Max tags per response (capped at 100).
        maximum: 100
        minimum: 1
        type: integer
    type: object
  name: list_tags
- description: "List every property definition (typed property schema), with cursor pagination."
  inputSchema:
    additionalProperties: false
    properties:
      cursor:
        description: Opaque pagination cursor from a prior response.
        type: string
      limit:
        description: Max definitions per response (capped at 100).
        maximum: 100
        minimum: 1
        type: integer
    type: object
  name: list_property_defs
- description: Project the agenda (repeating tasks + due/scheduled blocks) for a date range.
  inputSchema:
    additionalProperties: false
    properties:
      cursor:
        description: "Opaque cursor returned by a previous response's `next_cursor` to fetch the next page."
        type: string
      end_date:
        description: Inclusive YYYY-MM-DD upper bound.
        type: string
      limit:
        description: Max entries per response (capped at 500).
        maximum: 500
        minimum: 1
        type: integer
      space_id:
        description: Optional ULID of the space to scope the agenda to. Omit for the unscoped (cross-space) view.
        type: string
      start_date:
        description: Inclusive YYYY-MM-DD lower bound.
        type: string
    required:
      - start_date
      - end_date
    type: object
  name: get_agenda
- description: "Creates the page if missing and `date` is within ~12 months of today (one `CreateBlock` op with origin `agent:<name>`), then returns the journal page for `space_id` on `date`. Idempotent per `(space_id, date)` after the first call. Outside that ~12-month window this tool never creates: an existing page is returned as a pure read, and a missing one returns a not-found error."
  inputSchema:
    additionalProperties: false
    properties:
      date:
        description: YYYY-MM-DD date string.
        type: string
      space_id:
        description: ULID of the space the daily journal belongs to.
        type: string
    required:
      - date
      - space_id
    type: object
  name: journal_for_date
- description: "List every space as { id, name, is_default }. Every read-write tool (and search / journal_for_date) requires a space_id — call this first to discover one. is_default marks the seeded Personal space, the sensible fallback when no space has been chosen."
  inputSchema:
    additionalProperties: false
    properties: {}
    type: object
  name: list_spaces
- description: "Read a whole page as Markdown, returned as { page_id, markdown }: a `# Title` line, YAML front matter with the page's aliases, tags and properties, then the block outline with each block's `key:: value` properties under it. Links, tags and ref-typed values are written as names, for reading; a name can be ambiguous, so write links by ULID (`[[ULID]]`, `#[ULID]`). Each block ends with `^ULID`, the block_id update_block_content takes. No pagination."
  inputSchema:
    additionalProperties: false
    properties:
      page_id:
        description: ULID of the page block.
        type: string
    required:
      - page_id
    type: object
  name: get_page_markdown
