src-tauri/src/mcp/tools_ro/snapshots/agaric_lib__mcp__tools_ro__tests__tool_response_get_block.snap
---
source: src/mcp/tools_ro.rs
expression: result
---
block_type: content
content: text
deleted_at: ~
due_date: ~
id: "[ULID]"
page_id: "[ULID]"
parent_id: ~
position: 1
priority: ~
properties: []
scheduled_date: ~
tags: []
todo_state: ~
