src-tauri/src/mcp/tools_ro/snapshots/agaric_lib__mcp__tools_ro__tests__tool_response_journal_for_date.snap
---
source: src/mcp/tools_ro/tests.rs
expression: result
---
block_type: page
content: "[DATE]"
deleted_at: ~
due_date: ~
id: "[ULID]"
page_id: "[ULID]"
parent_id: ~
position: 2
priority: ~
scheduled_date: ~
todo_state: ~
