src-tauri/src/mcp/tools_ro/snapshots/agaric_lib__mcp__tools_ro__tests__tool_response_list_property_defs.snap
---
source: src/mcp/tools_ro/tests.rs
assertion_line: 1867
expression: result
---
has_more: false
items:
  - created_at: "[TIMESTAMP]"
    key: assignee
    options: ~
    value_type: text
  - created_at: "[TIMESTAMP]"
    key: completed_at
    options: ~
    value_type: date
  - created_at: "[TIMESTAMP]"
    key: created_at
    options: ~
    value_type: date
  - created_at: "[TIMESTAMP]"
    key: due
    options: ~
    value_type: date
  - created_at: "[TIMESTAMP]"
    key: due_date
    options: ~
    value_type: date
  - created_at: "[TIMESTAMP]"
    key: effort
    options: "[\"15m\",\"30m\",\"1h\",\"2h\",\"4h\",\"1d\"]"
    value_type: select
  - created_at: "[TIMESTAMP]"
    key: is_space
    options: "[\"true\"]"
    value_type: select
  - created_at: "[TIMESTAMP]"
    key: listStyle
    options: "[\"bullet\",\"ordered\"]"
    value_type: select
  - created_at: "[TIMESTAMP]"
    key: location
    options: ~
    value_type: text
  - created_at: "[TIMESTAMP]"
    key: priority
    options: "[\"1\",\"2\",\"3\"]"
    value_type: select
  - created_at: "[TIMESTAMP]"
    key: repeat
    options: ~
    value_type: text
  - created_at: "[TIMESTAMP]"
    key: repeat-count
    options: ~
    value_type: number
  - created_at: "[TIMESTAMP]"
    key: repeat-origin
    options: ~
    value_type: text
  - created_at: "[TIMESTAMP]"
    key: repeat-seq
    options: ~
    value_type: number
  - created_at: "[TIMESTAMP]"
    key: repeat-until
    options: ~
    value_type: date
  - created_at: "[TIMESTAMP]"
    key: scheduled_date
    options: ~
    value_type: date
  - created_at: "[TIMESTAMP]"
    key: space
    options: ~
    value_type: ref
  - created_at: "[TIMESTAMP]"
    key: status
    options: "[\"active\",\"paused\",\"done\",\"archived\"]"
    value_type: select
  - created_at: "[TIMESTAMP]"
    key: todo_state
    options: "[\"TODO\",\"DOING\",\"DONE\",\"CANCELLED\"]"
    value_type: select
  - created_at: "[TIMESTAMP]"
    key: url
    options: ~
    value_type: text
next_cursor: "[CURSOR]"
total_count: ~
