src-tauri/src/mcp/tools_ro/snapshots/agaric_lib__mcp__tools_ro__tests__tool_response_list_spaces.snap
---
source: src/mcp/tools_ro/tests.rs
expression: result
---
- id: 00000000000000000AGAR1CPER
  is_default: true
  name: Personal
- id: 00000000000000000AGAR1CWRK
  is_default: false
  name: Work
