src-tauri/src/mcp/tools_ro/snapshots/agaric_lib__mcp__tools_ro__tests__tool_response_list_tags.snap
---
source: src/mcp/tools_ro/tests.rs
assertion_line: 1853
expression: result
---
has_more: false
items:
  - name: snap-tag
    tag_id: "[ULID]"
    updated_at: "[TIMESTAMP]"
    usage_count: 0
next_cursor: "[CURSOR]"
total_count: ~
