src-tauri/src/mcp/tools_ro/snapshots/agaric_lib__mcp__tools_ro__tests__tool_response_search.snap
---
source: src/mcp/tools_ro.rs
expression: result
---
has_more: false
items:
  - block_type: content
    content: findme please
    deleted_at: ~
    due_date: ~
    id: "[ULID]"
    page_id: "[ULID]"
    parent_id: ~
    position: 1
    priority: ~
    scheduled_date: ~
    todo_state: ~
next_cursor: "[CURSOR]"
